--- a/Miscelanea/nbproject/project.properties
+++ b/Miscelanea/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/Miscelanea.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
+file.reference.poi-3.9-sources.jar=lib\\Excel\\poi-3.9-sources.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.poi-3.9-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
